--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
 
         <div class="social-links">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://web.facebook.com/theBustonAcademy" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/thebuston_academy/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           </div>
 
       </div>
